[package]
name = "browser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom = { path = "../dom" }
fleck = "0.1.1"
stammer = { git = "https://git.sr.ht/~ma3ke/stammer", branch = "main" }
nannou = "0.18.1"
